[workspace]

members = [
    "dispatch_examples/greeter",
    "frc42_dispatch",
    "frc42_dispatch/hasher",
    "frc42_dispatch/macros",
    "frc42_dispatch/macros/example",
    "frc46_token",
    "frcxx_nft",
    "fvm_actor_utils",
    "fvm_dispatch_tools",
    "testing/fil_token_integration",
    "testing/fil_token_integration/actors/basic_nft_actor",
    "testing/fil_token_integration/actors/basic_receiving_actor",
    "testing/fil_token_integration/actors/basic_token_actor",
    "testing/fil_token_integration/actors/basic_transfer_actor",
    "testing/fil_token_integration/actors/frc46_test_actor",
    "testing/fil_token_integration/actors/frcxx_test_actor",
    "frc46_factory_token",
    "frc46_factory_token/token_impl"
]

[patch."https://github.com/filecoin-project/ref-fvm"]
fvm_shared = { path = "../../ref-fvm/shared" }
fvm_sdk = { path = "../../ref-fvm/sdk" }
fvm_ipld_hamt = { path = "../../ref-fvm/ipld/hamt" }
fvm_ipld_kamt = { path = "../../ref-fvm/ipld/kamt" }
fvm_ipld_amt = { path = "../../ref-fvm/ipld/amt" }
fvm_ipld_bitfield = { path = "../../ref-fvm/ipld/bitfield"}
fvm_ipld_encoding = { path = "../../ref-fvm/ipld/encoding"}
fvm_ipld_blockstore = { path = "../../ref-fvm/ipld/blockstore"}

