
[package]
name = "frcxx_nft"
version = "0.1.0"
edition = "2021"

[dependencies]
frc42_dispatch = { path = "../frc42_dispatch" }
fvm_actor_utils = { path = "../fvm_actor_utils" }

cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
fvm_ipld_bitfield = { version = "0.5.4", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_hamt = { version = "0.6.0", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_amt = { version = "0.5.0", features = ["go-interop"] }
fvm_ipld_encoding = { version = "0.3.2", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_sdk = { version = "=3.0.0-alpha.22", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_shared = { version = "3.0.0-alpha.16", git = "https://github.com/filecoin-project/ref-fvm" }
integer-encoding = { version = "3.0.4" }
num-traits = { version = "0.2.15" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = { version = "0.5.0" }
thiserror = { version = "1.0.31" }
