[package]
name = "greeter"
version = "0.1.0"
edition = "2021"

[dependencies]
frc42_dispatch = { path = "../../frc42_dispatch" }
fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_encoding = { version = "0.3.2", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_sdk = { version = "3.0.0-alpha.22", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_shared = { version = "3.0.0-alpha.16", git = "https://github.com/filecoin-project/ref-fvm" }

[dev-dependencies]
cid = { version = "0.8.5", default-features = false }
fvm = { version = "3.0.0-alpha.5", default-features = false }
fvm_integration_tests = "2.0.0-alpha.1"
actors-v10 = { package = "fil_builtin_actors_bundle", git = "https://github.com/filecoin-project/builtin-actors", rev = "e3f3db964434dc354ea52d08c8778b4beabce5f7" }

[build-dependencies]
substrate-wasm-builder = "4.0"
